build: set npm publish to public
Since this is a scoped package, NPM would think it's private without this setting.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "Felipe Santos <felipecassiors@gmail.com> (https://felipesantos.dev)"
   ],
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "test": "echo 'Implement tests'",
     "lint": "eslint .",
